<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToolKit</string>
    <string name="action_settings">Settings</string>
    <string name="flashlighticon">Flashlight</string>
    <string name="hello_world">Hello world!</string>
    <string name="convertericon">Unit Converter</string>
    <string name="timericon">Timer</string>
    <string name="compassicon">Compass</string>
    <string name="calcicon">Calculator</string>
    <string name="bubbleicon">Bubble Level</string>
    <string name="mglassicon">Magnifying\n Glass</string>
    <string name="mirroricon">Mirror</string>
    <string name="title_activity_flashlight">FlashlightActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonSquareRoot">√</string>
    <string name="buttonSquared">x²</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonSine">sin</string>
    <string name="buttonCosine">cos</string>
    <string name="buttonTangent">tan</string>
    <string name="zerotext">0</string>
    <string name="title_activity_timer">MainActivity</string>
    <string name="title_activity_bubble">BubbleActivity</string>
    <string name="X">X : </string>
    <string name="Y">Y : </string>
    <string name="Z">Z : </string>
    <string name="notsupported">not supported</string>
    <string name="flashbg">flashbg</string>
    <string name="title_activity_compass">CompassActivity</string>
    <string name="heading">Heading: 0.0</string>
    <string name="title_activity_converter">ConverterActivity</string>
    <string name="unit1">Temperature</string>
    <string name="unit2">Weight</string>
    <string name="unit3">Length</string>
    <string name="unit4">Power</string>
    <string name="unit5">Energy</string>
    <string name="unit6">Velocity</string>
    <string name="unit7">Area</string>
    <string name="unit8">Volume</string>
    <string name="weightunitkg">Kg</string>
    <string name="weightunitgm">gm</string>
    <string name="weightunitlb">lb</string>
    <string name="weightunitounce">ounce</string>
    <string name="weightunitmg">mg</string>
    <string name="temperatureunitc">celcius</string>
    <string name="temperatureunitf">fahrenheit</string>
    <string name="lengthunitcm">cm</string>
    <string name="lengthunitm">m</string>
    <string name="lengthunitmm">mm</string>
    <string name="lengthunitkm">km</string>
    <string name="lengthunitfeet">ft</string>
    <string name="lengthunitmile">mile</string>
    <string name="lengthunitinch">inch</string>
    <string name="powerunithorseposer">horsepower</string>
    <string name="powerunitwatts">watts</string>
    <string name="powerunitkilowatts">kilowatts</string>
    <string name="energyunitcalories">calories</string>
    <string name="energyunitjoules">joules</string>
    <string name="energyunitkilocalories">kilocalories</string>
    <string name="velocityunitkmph">Km/hr</string>
    <string name="velocityunitmeterpers">m/s</string>
    <string name="velocityunitmilesperh">miles/hr</string>
    <string name="velocityunitfeetpers">feet/s</string>
    <string name="areaunitsqmm">square mm</string>
    <string name="areaunitsqm">square m</string>
    <string name="areaunitsqcm">square cm</string>
    <string name="areaunitsqkm">square km</string>
    <string name="areaunitsqmiles">square miles</string>
    <string name="areaunitsqyard">square yards</string>
    <string name="volumeunitmillilitres">millilitre</string>
    <string name="volumeunitlitres">litre</string>
    <string name="volumeunitcubicmm">cubic mm</string>
    <string name="volumeunitcubiccm">cubic cm</string>
    <string name="volumeunitcubicm">cubic m</string>
    <string name="volumeunitcubicfeet">cubic feet</string>
    <string name="Value">Value<string /></string>
    <string name="Type">Type</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Convert">Convert</string>
    <string name="Result">Result</string>
    <string name="title_activity_mirror">MirrorActivity</string>
    <string name="title_activity_magnify">MagnifyActivity</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Reset">Reset</string>
    <string name="Lap">Lap</string>


</resources>