<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".TimerActivity" >

    <TextView
        android:id="@+id/ElapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="72sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/StartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dip"
            android:onClick="onStartClicked"
            android:paddingLeft="24dip"
            android:paddingRight="24dip"
            android:text="@string/Start"
            android:textSize="36sp" />

        <Button
            android:id="@+id/PauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dip"
            android:onClick="onPauseClicked"
            android:paddingLeft="24dip"
            android:paddingRight="24dip"
            android:text="@string/Pause"
            android:textSize="36sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/ResetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dip"
            android:onClick="onResetClicked"
            android:paddingLeft="24dip"
            android:paddingRight="24dip"
            android:text="@string/Reset"
            android:textSize="36sp" />

        <Button
            android:id="@+id/LapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dip"
            android:onClick="onLapClicked"
            android:paddingLeft="24dip"
            android:paddingRight="24dip"
            android:text="@string/Lap"
            android:textSize="36sp"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="" />

</LinearLayout>