<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#585858"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConverterActivity" >

     <LinearLayout
         android:id="@+id/LinearLayout03"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/LinearLayoutTo"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/TextViewString"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/Result" />

         <EditText
             android:id="@+id/TextViewResult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:inputType="none" />
     </LinearLayout>

     <LinearLayout
         android:id="@+id/LinearLayoutTo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/LinearLayoutFrom"
         android:layout_below="@+id/LinearLayoutFrom"
         android:layout_marginTop="20dp"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/TextViewTo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/To" />

         <Spinner
             android:id="@+id/SpinnerTo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>

     <LinearLayout
         android:id="@+id/LinearLayoutFrom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/LinearLayout02"
         android:layout_below="@+id/LinearLayout02"
         android:layout_marginTop="20dp"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/TextViewFrom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/From" />

         <Spinner
             android:id="@+id/SpinnerFrom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>

     <LinearLayout
         android:id="@+id/LinearLayout02"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/LinearLayout01"
         android:layout_below="@+id/LinearLayout01"
         android:layout_marginTop="20dp"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/TextView02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/Value" />

         <EditText
             android:id="@+id/EditTextValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:inputType="numberSigned" >

             <requestFocus />
         </EditText>
     </LinearLayout>

     <Button
         android:id="@+id/Button01"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/LinearLayout03"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="42dp"
         android:text="@string/Convert" />

     <LinearLayout
         android:id="@+id/LinearLayout01"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/TextView01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/Type" />

         <Spinner
             android:id="@+id/SpinnerUnit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
     
</RelativeLayout>