<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151515"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/flashButton"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:background="@drawable/flashlight"
        android:contentDescription="@string/flashlighticon"
        android:drawableTop="@drawable/flashlight" />

    <ImageButton
        android:id="@+id/mglassButton"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_alignLeft="@+id/flashButton"
        android:layout_alignTop="@+id/mirrorButton"
        android:background="@drawable/mglass"
        android:contentDescription="@string/mglassicon" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/flashButton"
        android:layout_below="@+id/flashButton"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/flashlighticon"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#585858" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mglassButton"
        android:layout_below="@+id/mglassButton"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/mglassicon"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#585858" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/mirrorButton"
        android:layout_alignRight="@+id/textView2"
        android:gravity="center"
        android:text="@string/mirroricon"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#585858" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/timerButton"
        android:layout_alignRight="@+id/timerButton"
        android:gravity="center"
        android:text="@string/timericon"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#585858" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/convertericon"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#585858" />

    <ImageButton
        android:id="@+id/converterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/flashButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/converter"
        android:contentDescription="@string/convertericon" />

    <ImageButton
        android:id="@+id/mirrorButton"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/mirror"
        android:contentDescription="@string/mirroricon" />

    <ImageButton
        android:id="@+id/timerButton"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/converterButton"
        android:background="@drawable/timer"
        android:contentDescription="@string/timericon" />

    <ImageButton
        android:id="@+id/calcButton"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignTop="@+id/mirrorButton"
        android:background="@drawable/calculator"
        android:contentDescription="@string/calcicon" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignRight="@+id/calcButton"
        android:gravity="center"
        android:text="@string/calcicon"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#585858" />

</RelativeLayout>